--- a/css/floats.css
+++ b/css/floats.css
@@ -10,11 +10,14 @@
 .grid {
     border: 1px black solid;
 }
-.grid .col {
-    display: block;
-    width: 300px;
+.grid .col {   
+    width: 33.33%;
     height: 300px;
-    background-color: red;
-    margin: 20px;
     float: left;
+    padding: 15px;
+}
+.grid .col-content {
+    width: 100%;
+    height: 100%;
+    background: red;
 }
